Animated scanBtn. Fixed visual bug where augmentation was way too big (esp. Waldemar animation).

--- a/app/src/main/assets/basics/css/animation.css
+++ b/app/src/main/assets/basics/css/animation.css
@@ -1,3 +1,8 @@
+body,html {
+	padding: 0px;
+	margin: 0px;
+}
+
 @keyframes sprite_waldemar_jump{
 	0% {background-position: 0px 0px;}
 	100% {background-position: -2100px 0px;}
